--- a/recovery/root/init.recovery.P15945AA1.rc
+++ b/recovery/root/init.recovery.P15945AA1.rc
@@ -1,13 +1,13 @@
-#add for board init.rc for recovery mode
+# add for board init.rc for recovery mode
 import /init.recovery.common.rc
- 
+import /init.recovery.fastboot.rc
+
 wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
-    
+
     export ANDROID_ROOT /system_root
 
 on late-fs
-   … 
     # Wait for keymaster
     exec_start wait_for_keymaster
 
