--- a/recovery/root/init.recovery.fastboot.rc
+++ b/recovery/root/init.recovery.fastboot.rc
@@ -1,22 +1,13 @@
-# Fastbootd service for TWRP on Unisoc / Samsung
-# This file ONLY handles fastbootd startup — USB gadget handled by init.recovery.usb.rc
-
 service fastbootd /system/bin/fastbootd
     class main
     user root
     group root system shell
-    seclabel u:r:recovery:s0
+    seclabel u:r:fastbootd:s0
     disabled
     oneshot
 
-# Trigger fastbootd when property is set from recovery UI
 on property:sys.fastbootd=1
     start fastbootd
 
-# Trigger fastbootd when USB config requests it
 on property:sys.usb.config=fastboot
     start fastbootd
-
-# Optional: prop to check if it started
-on property:init.svc.fastbootd=running
-    setprop sys.fastbootd.active 1
